--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
-    "jose": "^6.0.12"
+    "jose": "^6.0.12",
+    "knex": "^3.1.0",
+    "mssql": "^11.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.0",
+    "@types/mssql": "^9.1.7",
     "@types/node": "^22.13.10",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
